syntax = "proto3";
package stafihub.stafihub.rmintreward;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "rmintreward/params.proto";
import "rmintreward/models.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/stafihub/stafihub/x/rmintreward/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stafihub/stafihub/rmintreward/params";
  }
  // Queries a list of ActLatestCycle items.
	rpc ActLatestCycle(QueryActLatestCycleRequest) returns (QueryActLatestCycleResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/act_latest_cycle/{denom}";
	}

// Queries a list of ActDetail items.
	rpc ActDetail(QueryActDetailRequest) returns (QueryActDetailResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/act_detail/{denom}/{cycle}";
	}

// Queries a list of UserMintCount items.
	rpc UserMintCount(QueryUserMintCountRequest) returns (QueryUserMintCountResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/user_mint_count/{address}/{denom}/{cycle}";
	}

// Queries a list of UserActs items.
	rpc UserActs(QueryUserActsRequest) returns (QueryUserActsResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/user_acts/{address}/{denom}";
	}

// Queries a list of ActCurrentCycle items.
	rpc ActCurrentCycle(QueryActCurrentCycleRequest) returns (QueryActCurrentCycleResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/act_current_cycle/{denom}";
	}

// Queries a list of ClaimInfoDetail items.
	rpc ClaimInfoDetail(QueryClaimInfoDetailRequest) returns (QueryClaimInfoDetailResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rmintreward/claim_info_detail/{address}/{denom}/{cycle}/{mintIndex}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryActLatestCycleRequest {
  string denom = 1;
}

message QueryActLatestCycleResponse {
  uint64 latestCycle = 1;
}

message QueryActDetailRequest {
  string denom = 1;
  uint64 cycle = 2;
}

message QueryActDetailResponse {
  MintRewardAct act = 4;
}

message QueryUserMintCountRequest {
  string address = 1;
  string denom = 2;
  uint64 cycle = 3;
}

message QueryUserMintCountResponse {
  uint64 count = 1;
}

message QueryUserActsRequest {
  string address = 1;
  string denom = 2;
}

message QueryUserActsResponse {
  Acts acts = 1;
}

message QueryActCurrentCycleRequest {
  string denom = 1;
}

message QueryActCurrentCycleResponse {
  uint64 currentCycle = 1;
}

message QueryClaimInfoDetailRequest {
  string address = 1;
  string denom = 2;
  uint64 cycle = 3;
  uint64 mintIndex = 4;
}

message QueryClaimInfoDetailResponse {
  UserClaimInfo claimInfo = 1;
}

// this line is used by starport scaffolding # 3
